# MOCAdjustmentTheory

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
data/: README.md
data/tracked/: README.md  source_data_manifest.csv
data/tracked/isobath/: global_isobath_GEBCO_1000m.nc  global_isobath_GEBCO_500m.nc
docs/: api.md  core_api.md  geometry.md  global_era5_scotia.md  index.md  specifications.md
docs/examples/: 01_idealized_non_itf_adjustment.md  02_global_non_itf_osnap.md  03_atlantic_scotia_decomposition.md  index.md
docs/javascripts/: mermaid.js
docs/reference/: core.md
docs/specifications/: geometry_pipeline.md  model_architecture.md
notebooks/: 01_idealized_non_itf_adjustment.ipynb  02_global_non_itf_osnap.ipynb  03_atlantic_scotia_decomposition.ipynb  WBC_analysis.ipynb  _example_helpers.py  compare_island_inpainted_forcing.ipynb  construct_forcing_dataset.ipynb  construct_forcing_dataset_island_inpainted.ipynb  extract_isobath_gebco.ipynb  global_era5_scotia.ipynb  idealized_wind_experiments.ipynb  run_global_adjustment_model.ipynb  run_global_rossby_model.ipynb
notebooks/input_generation/: compare_island_inpainted_forcing.ipynb  construct_forcing_dataset.ipynb  construct_forcing_dataset_island_inpainted.ipynb  construct_forcing_dataset_island_inpainted_no_taper.ipynb  construct_forcing_dataset_v2.ipynb  construct_forcing_dataset_v3.ipynb  construct_forcing_dataset_v4.ipynb
notebooks/wind_investigation/: full_era5_spectral_filter.ipynb  localized_bursts.ipynb  naive_burst_suite.ipynb  realistic_wind_effects.ipynb  zonal_average_wind_effects.ipynb
scripts/: plot_geometry_acceptance.py
src/moc_adjustment_model/: __init__.py  __main__.py  hello.py
src/moc_adjustment_theory/: __init__.py  __main__.py  _bathymetry.py  constants.py  forcing.py  fourier.py  gebco.py  geometry.py  geometry_io.py  global_rossby.py  hello.py  model.py  output.py  topology.py
tests/: conftest.py  test_forcing.py  test_fourier.py  test_gebco.py  test_geometry.py  test_geometry_io.py  test_global_rossby.py  test_hello.py  test_model.py  test_notebook_artifacts.py  test_reference_atlantic.py  test_topology.py
