[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "moc-adjustment-model"
version = "0.1.0"
description = "Modular models of meridional-overturning-circulation adjustment"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Andrew Watford"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]
docs = [
  "mkdocs-material>=9.5",
]
dev = [
  "build>=1.2",
  "mkdocs-material>=9.5",
  "pytest>=8",
]

[project.scripts]
moc-adjustment-model = "moc_adjustment_model.hello:main"

[project.urls]
Repository = "https://github.com/andrewwatford/MOCAdjustmentModel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moc_adjustment_model = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
