[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "moc-adjustment-theory"
version = "0.1.0"
description = "Modular models of meridional-overturning-circulation adjustment"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "Andrew Watford"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "dask[array]>=2024.10",
  "h5py>=3.11",
  "h5netcdf>=1.3",
  "numpy>=1.26",
  "scipy>=1.13",
  "xarray>=2024.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
docs = [
  "mkdocs-material>=9.5",
]
dev = [
  "build>=1.2",
  "mkdocs-material>=9.5",
  "pytest>=8",
]

[project.urls]
Repository = "https://github.com/andrewwatford/MOCAdjustmentTheory"
Documentation = "https://andrewwatford.github.io/MOCAdjustmentTheory/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moc_adjustment_theory = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: opt-in tests requiring local scientific source data",
]
